# lgl-powerprofile-manager

./: CHANGELOG.md  CMakeLists.txt  README.md  debianinstall.py  lgl-powerprofile-manager.desktop  lgl-tunedctl-manager.md  main.cpp  mainwindow.cpp  mainwindow.h  profiledata.h  resources.qrc
